<?xml version="1.0" encoding="utf-8"?>
<!--suppress CheckTagEmptyBody -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="ecdIs">EDD %s</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="onDate">on date</string>
    <string name="emptyString">empty</string>
    <string name="sendData">Send data</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="ecdAndGestationalAge">EDD and gestational age</string>
    <string name="app_name">Pregnancy Calculator</string>
    <string name="widget_small_name">Pregnancy Calculator Small</string>
    <string name="widget_simple_name">Pregnancy Calculator Medium</string>
    <string name="widget_additional_name">Pregnancy Calculator Large</string>
    <string name="lastMenstruationDate">Last menstrual period</string>
    <string name="menstrualCycleLen">Menstrual cycle length</string>
    <string name="lutealPhaseLen">Luteal phase length</string>
    <string name="restoreDefaultValues">Restore default values</string>
    <string name="ovulationDate">Ovulation (conception) date</string>
    <string name="ultrasoundDate">Ultrasound date</string>
    <string name="diagnosedGestationalAge">Determined gestational age</string>
    <string name="diagnosedEmbryonicAge">Determined fertilization age</string>
    <string name="isGestationalAge">Gestational age (as a rule)</string>
    <string name="isEmbryonicAge">Fertilization age</string>
    <string name="firstAppearanceDate">Date of clinical examination</string>
    <string name="firstMovementsDate">First fetal movement date</string>
    <string name="IsFirstPregnancy">First pregnancy</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="calculate">Calculate</string>
    <string name="calculateEcdAndGestationalAge">Calculate EDD and gestational age</string>
    <string name="sendto_app_not_available">Mail application is not available</string>
    <string name="market_app_not_available">Market application is not available</string>
    <string name="errorIncorrectGestationalAge">Error</string>
    <string name="errorIncorrectCurrentDateGreater">The date of calculation is much greater than EDD.</string>
    <string name="errorIncorrectCurrentDateSmaller">The date of calculation is much lesser than starting point of a pregnancy.</string>
    <string name="firstTrimester">First trimester</string>
    <string name="secondTrimester">Second trimester</string>
    <string name="thirdTrimester">Third trimester</string>
    <string name="additionalInfo">trimester number is %1$s; expected pregnancy length is %2$s%3$s</string>
    <string name="positiveRest">; %s left before the EDD</string>
    <string name="zeroRest">; EDD</string>
    <string name="negativeRest"></string>
    <string name="errorInvalidAppWidgetId">Invalid widget identifier</string>
    <string name="widgetSpecifyTheMethodOfCalculation">Specify preferred method of calculation:</string>
    <string name="errorNotSelectedCalculationMethod">Method of calculation is not specified</string>
    <string name="widgetAddWidget">Add widget</string>
    <string name="widgetStartTheApplicationToSpecifyNecessaryData">Run the application to fill out the necessary data</string>
    <string name="widgetStartTheApplication">Run application</string>
    <string name="countdown">Countdown</string>
    <string name="showCalculationMethod">Display method of calculation</string>
    <string name="widgetTextInfo">Pregnancy</string>
    <string name="widgetTextRestInfo">Till the EDD</string>
    <string name="widgetCalculationMethod">Method of calculation: %s</string>
    <string name="initialization">Loading&#8230;</string>
    <string name="today">Today</string>
    <string name="prevDay">Previous day</string>
    <string name="nextDay">Next day</string>
    <string name="pref_ui_settings_title">User interface</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_other_settings_title">Other</string>
    <string name="pref_rate_title">Rate the application</string>
    <string name="pref_rate_summary"></string>
    <string name="pref_support_title">Feedback</string>
    <string name="pref_support_summary">Send review, comment, suggestion.</string>
    <string name="pref_womancyc_title">"Calendar of women's cycles"</string>
    <string name="pref_womancyc_summary">\"WomanCyc\": simple period tracker application.</string>
    <string name="calculation">Calculation</string>
    <string name="sick_list">Parental leave</string>
    <string name="sick_list_days">Number of days on which leave is granted</string>
    <string name="sick_list_age">Gestational age from which leave is started</string>
    <string name="error_enter_value">Enter number from %1$d to %2$d</string>
    <string name="error_value_already_exists">Number is already in list</string>
    <string name="error_value_bounds">Number must be in range from %1$d to %2$d inclusive</string>
    <string name="persist_setting">Save in settings</string>
    <string name="when_the_duration_of_pregnancy">Gestational age from which leave is started</string>
    <string name="on">Number of days on which leave is granted</string>
    <string name="dialog_sick_list">You can edit lists of values in \"Menu-Settings-Parental leave\"</string>
    <string name="do_not_show">Do not show again</string>

</resources>