<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory android:title="@string/pref_ui_settings_title" >
        <ListPreference
            android:defaultValue="@integer/defaultTheme"
            android:dialogTitle="@string/pref_theme_title"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            android:key="pref_theme"
            android:title="@string/pref_theme_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_settings_title" >
        <Preference
            android:summary="@string/pref_rate_summary"
            android:title="@string/pref_rate_title" >
            <intent android:action="com.anna.sent.soft.childbirthdate.actions.MarketChildbirthDateActionActivity" />
        </Preference>
        <Preference
            android:summary="@string/pref_support_summary"
            android:title="@string/pref_support_title" >
            <intent android:action="com.anna.sent.soft.childbirthdate.actions.EmailSupportActionActivity" />
        </Preference>
        <Preference
            android:summary="@string/pref_childbirthdate_summary"
            android:title="@string/pref_childbirthdate_title" >
            <intent android:action="com.anna.sent.soft.childbirthdate.actions.MarketWomanCycActionActivity" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>