<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle">

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding">

        <TextView
            android:id="@+id/widgetConfigureTextView"
            style="@style/TextViewStyle.Medium"
            android:text="@string/widgetSpecifyTheMethodOfCalculation" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/RadioGroupStyle" />

        <CheckBox
            android:id="@+id/checkBoxCountdown"
            style="@style/CheckBoxStyle"
            android:text="@string/countdown" />

        <CheckBox
            android:id="@+id/checkBoxShowCalculationMethod"
            style="@style/CheckBoxStyle"
            android:text="@string/showCalculationMethod" />

        <Button
            android:id="@+id/widgetConfigureButton"
            style="@style/ButtonStyle"
            android:text="@string/widgetAddWidget" />
    </LinearLayout>
</ScrollView>
