<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle">

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/ultrasoundDate" />

        <DatePicker
            android:id="@+id/datePickerUltrasoundDate"
            style="@style/DatePickerStyle" />

        <LinearLayout
            style="@style/LinearLayoutVerticalStyle"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/textViewDiagnosedAge"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:text="@string/diagnosedGestationalAge" />

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:gravity="center">

                <NumberPicker
                    android:id="@+id/numberPickerUltrasoundWeeks"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_marginEnd="@dimen/view_horizontal_margin"
                    android:layout_marginRight="@dimen/view_horizontal_margin"
                    android:text="@string/weeks" />

                <NumberPicker
                    android:id="@+id/numberPickerUltrasoundDays"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/days" />
            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            style="@style/RadioGroupStyle"
            android:layout_marginTop="@dimen/view_vertical_margin">

            <RadioButton
                android:id="@+id/radioIsGestationalAge"
                style="@style/RadioButtonStyle"
                android:checked="true"
                android:text="@string/isGestationalAge" />

            <RadioButton
                android:id="@+id/radioIsEmbryonicAge"
                style="@style/RadioButtonStyle"
                android:text="@string/isEmbryonicAge" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
