<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutHorizontalStyle"
    android:paddingBottom="@dimen/layout_vertical_padding"
    android:paddingLeft="@dimen/layout_horizontal_padding"
    android:paddingRight="@dimen/layout_horizontal_padding"
    android:paddingTop="@dimen/layout_vertical_padding" >

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/calculateEcdAndGestationalAge"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/buttonSickList"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/sick_list"
        android:text="@string/sick_list" />

</LinearLayout>