<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle">

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/firstAppearanceDate" />

        <DatePicker
            android:id="@+id/datePickerFirstAppearanceDate"
            style="@style/DatePickerStyle" />

        <LinearLayout
            style="@style/LinearLayoutVerticalStyle"
            android:layout_width="wrap_content">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/view_vertical_margin"
                android:text="@string/diagnosedGestationalAge" />

            <LinearLayout
                style="@style/LinearLayoutHorizontalStyle"
                android:gravity="center">

                <NumberPicker
                    android:id="@+id/numberPickerFirstAppearanceWeeks"
                    style="@style/NumberPickerStyle" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/weeks" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
