<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle">

    <LinearLayout style="@style/LinearLayoutVerticalStyle.WithPadding">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/lastMenstruationDate" />

        <DatePicker
            android:id="@+id/datePickerLastMenstruationDate"
            style="@style/DatePickerStyle" />

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_marginTop="@dimen/view_vertical_margin">

            <LinearLayout
                style="@style/LinearLayoutVerticalStyle"
                android:layout_width="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/menstrualCycleLen" />

                <LinearLayout
                    style="@style/LinearLayoutHorizontalStyle"
                    android:layout_width="wrap_content"
                    android:gravity="center">

                    <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                        android:id="@+id/numberPickerMenstrualCycleLen"
                        style="@style/NumberPickerStyle" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/days" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutVerticalStyle"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/view_horizontal_margin"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/lutealPhaseLen" />

                <LinearLayout
                    style="@style/LinearLayoutHorizontalStyle"
                    android:layout_width="wrap_content"
                    android:gravity="center">

                    <com.anna.sent.soft.numberpickerlibrary.NumberPicker
                        android:id="@+id/numberPickerLutealPhaseLen"
                        style="@style/NumberPickerStyle" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/days" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRestoreDefaultValues"
            style="@style/ButtonStyle"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:text="@string/restoreDefaultValues" />
    </LinearLayout>
</ScrollView>
